--- a/package.json
+++ b/package.json
@@ -1,1 +1,16 @@
+{
+  "name": "neurogrid-core",
+  "version": "0.1.0",
+  "description": "Core smart contracts for the NeuroGrid decentralized AI + DeSci infrastructure.",
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.js"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.19.0",
+    "dotenv": "^16.4.0"
+  }
+}
 
