--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPBNB_RPC=https://opbnb-testnet-rpc.bnbchain.org
-PRIVATE_KEY=YOUR_WALLET_PRIVATE_KEY
+OPBNB_TESTNET_RPC=https://opbnb-testnet-rpc.bnbchain.org
+PRIVATE_KEY=0xyour_private_key_here
