--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
 OPBNB_TESTNET_RPC=https://opbnb-testnet-rpc.bnbchain.org
 0xPASTE_YOUR_PRIVATE_KEY_HERE
+
+---
+
+# BNB Chain Config
+BNB_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
+PRIVATE_KEY=your-private-key-here  # For testnet only
+
+# AI Integration (e.g., Hugging Face API for neural predictions)
+HUGGING_FACE_API_KEY=your-api-key-here
+
+# Networking (P2P hints - add libp2p later)
+P2P_PORT=3000
+BOOTSTRAP_NODE=your-bootstrap-node-url
