--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "neurogrid-core",
-  "version": "0.1.0",
-  "description": "Core smart contracts for the NeuroGrid decentralized AI + DeSci infrastructure.",
+  "version": "1.0.0",
   "scripts": {
-    "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "deploy": "npx hardhat run scripts/deploy.js"
+    "deploy": "npx hardhat run scripts/deploy.js --network testnet"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.7.0",
+    "huggingface": "^1.0.0"  // Added for AI API calls
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.19.0",
-    "dotenv": "^16.4.0"
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "libp2p": "^0.40.0"  // Added for P2P networking basics
   }
 }
-
