--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
-PORT=3000
-BNB_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
-PRIVATE_KEY=your-private-key-here
-AI_API_KEY=your-huggingface-api-key-here
-AI_MODEL=your-neurogrid-model
-ENCRYPTION_KEY=your-32-character-encryption-key
-ZK_PROOF_KEY=your-zkp-key
-P2P_PORT=3001
-BOOTSTRAP_NODE=/ip4/127.0.0.1/tcp/3001/p2p/your-peer-id
-RATE_LIMIT=10
-MAX_DATA_SIZE=1024
+# ===============================
+# NeuroGrid Core — Environment
+# ===============================
+
+# Network configuration
+CHAIN_ID=97
+RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
+
+# Deployer (DO NOT COMMIT REAL KEY)
+DEPLOYER_PRIVATE_KEY=YOUR_PRIVATE_KEY_HERE
+
+# Registry configuration
+REGISTRY_DOMAIN=NEUROGRID_CORE
+EMERGENCY_GUARDIAN_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Gas & execution controls
+MAX_GAS_PRICE_GWEI=20
+TX_CONFIRMATIONS=3
+
+# Logging
 LOG_LEVEL=info
-ENABLE_AUDIT_LOGS=true
