--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "neurogrid-core",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "test": "npx hardhat test",
-    "deploy": "npx hardhat run scripts/deploy.js --network testnet"
-  },
-  "dependencies": {
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "dotenv": "^16.0.0",
-    "ethers": "^5.7.0",
-    "huggingface": "^1.0.0"  // Added for AI API calls
+    "build": "hardhat compile",
+    "test": "hardhat test",
+    "lint": "solhint 'contracts/**/*.sol'"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "libp2p": "^0.40.0"  // Added for P2P networking basics
+    "hardhat": "2.22.2",
+    "@nomicfoundation/hardhat-toolbox": "5.0.0",
+    "solhint": "4.5.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "5.0.2"
   }
 }
