--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,18 @@ TX_CONFIRMATIONS=3
 
 # Logging
 LOG_LEVEL=info
+
+# Network
+CHAIN_ID=97
+RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
+
+# Deployer
+DEPLOYER_PRIVATE_KEY=__REPLACE__
+
+# Contracts
+CORE_ADMIN_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Chainlink
+CHAINLINK_ORACLE_ADDRESS=0x0000000000000000000000000000000000000000
+CHAINLINK_JOB_ID=__REPLACE__
+
