--- a/github/workflows/secrets-check.yml
+++ b/github/workflows/secrets-check.yml
@@ -1,1 +1,13 @@
+name: Secrets Check
+
+on: [push, pull_request]
+
+jobs:
+  scan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Scan for env leaks
+        run: |
+          ! grep -R "PRIVATE_KEY" .
 
