--- a/slither.config.json
+++ b/slither.config.json
@@ -1,1 +1,13 @@
+{
+  "exclude": [
+    "node_modules",
+    "test",
+    "scripts"
+  ],
+  "solc_disable_warnings": true,
+  "detectors_to_exclude": [
+    "timestamp",
+    "assembly"
+  ]
+}
 
