--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,6 @@ CORE_ADMIN_ADDRESS=0x0000000000000000000000000000000000000000
 CHAINLINK_ORACLE_ADDRESS=0x0000000000000000000000000000000000000000
 CHAINLINK_JOB_ID=__REPLACE__
 
+DEPLOYER_PRIVATE_KEY=0xYOUR_PRIVATE_KEY
+CORE_ADDRESS=0xCORE_ADDRESS_AFTER_DEPLOY
+
